--- a/hayhay/webapps/js/ejs/templates/groupnewsbycategory_v8.ejs
+++ b/hayhay/webapps/js/ejs/templates/groupnewsbycategory_v8.ejs
@@ -40,7 +40,7 @@
 									<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="padding: 0px;">
 										<div class="container-fluid" style="padding: 0px;">
 										  	<a   onclick="return showWebcontent('<%=mainNews.url%>',false,'<%=mainNews.id%>','<%=mainNews.type%>','');" style="text-decoration: none;"> 
-												<img class="img-responsive mainarticleimage" src="/images/icons/blankpic.jpg" alt="" style="width: 100%;" id="image_<%=mainNews.id%>">
+												<img class="img-responsive mainarticleimage" src="<%=mainNews.imageUrl%>" alt="" style="width: 100%;" id="image_<%=mainNews.id%>">
 											</a>
 										</div>
 									</div>
@@ -66,7 +66,7 @@
 											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"  style="padding: 0px;" id="<%=news.id%>">
 												<div class="container-fluid" style="padding:0px 4px 0px 4px;">
 													<a  onclick="return showWebcontent('<%=news.url%>',false,'<%=news.id%>','<%=news.type%>','');" style=" text-decoration: none;">
-														<img class="img-responsive highlightarticleimage" style="width: 100%;padding-top: 6px" alt="<%=news.title%>" src="/images/icons/blankpic.jpg" id="image_<%=news.id%>">
+														<img class="img-responsive highlightarticleimage" style="width: 100%;padding-top: 6px" alt="<%=news.title%>" src="<%=news.imageUrl%>" id="image_<%=news.id%>">
 													</a>
 												</div>
 											</div>
@@ -93,7 +93,7 @@
 									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"  style="padding: 0px;">
 										<div class="container-fluid" style="padding: 0px;">
 										  	<a   onclick="return showWebcontent('<%=recommendNews.url%>',false,'<%=recommendNews.id%>','<%=recommendNews.type%>','');" style="text-decoration: none;"> 
-												<img class="img-responsive mainarticleimage" src="/images/icons/blankpic.jpg" alt="" style="width: 100%;" id="image_<%=recommendNews.id%>">
+												<img class="img-responsive mainarticleimage" src="<%=recommendNews.imageUrl%>" alt="" style="width: 100%;" id="image_<%=recommendNews.id%>">
 											</a>
 										</div>
 									</div>
@@ -124,7 +124,7 @@
 												 		<table>
 												 			<tr>
 												 				<td style="text-align: -webkit-center;">
-												 					<img class="img-responsive ortherarticleimage" style="width: 100%;" onclick="return showWebcontent('<%=news.url%>',false,'<%=news.id%>','<%=news.type%>','');"   alt="<%=news.title%>" src="/images/icons/blankpic.jpg" id="image_<%=news.id%>">
+												 					<img class="img-responsive ortherarticleimage" style="width: 100%;" onclick="return showWebcontent('<%=news.url%>',false,'<%=news.id%>','<%=news.type%>','');"   alt="<%=news.title%>" src="<%=news.imageUrl%>" id="image_<%=news.id%>">
 												 				</td>
 												 			</tr>
 												 			<tr>
